# wearable-athlete-monitoring

./: .env.example  .gitignore  Makefile  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_enable_timescaledb.py  002_create_all_tables.py  003_create_anomaly_records.py  004_create_continuous_aggregates.py  005_add_health_connect_fields.py
backend/app/: __init__.py  config.py  main.py
backend/app/analytics/: __init__.py  acwr.py  anomaly_classifier.py  anomaly_detection.py  anomaly_types.py  ewma.py  fitness_score.py  hrv.py  load_helpers.py  monotony.py  recovery_score.py  sleep.py  trend_detection.py
backend/app/api/: __init__.py  analytics_router.py  athlete_router.py  coach_router.py  fitness_router.py  health_data_router.py  llm_router.py  metrics_router.py  session_router.py  sync_router.py  team_router.py  wellness_router.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  password.py  router.py  schemas.py
backend/app/db/: __init__.py  __main__.py  seed.py
backend/app/models/: __init__.py  anomaly_record.py  athlete_profile.py  base.py  metric_record.py  session_metrics.py  team.py  training_session.py  user.py  wellness_entry.py
backend/app/repositories/: __init__.py  metric_agg_repo.py  session_repo.py  team_repo.py  user_repo.py  wellness_repo.py
backend/app/services/: anomaly_service.py  fitness_service.py  hc_sync_service.py  llm_analysis_service.py  (+11 more)
backend/tests/: __init__.py  conftest.py  test_db_connection.py  test_health.py
(+164 files in other folders)
